# problems

./: .gitignore
advent-of-code/haskell/: advent-of-code.cabal
advent-of-code/haskell/app/: Main.hs  Utils.hs  Y2023D01.hs  Y2023D02.hs  Y2023D03.hs
advent-of-code/inputs/2023-01/: part1-example.toml  part2-example.toml
advent-of-code/inputs/2024-01/: part1-example.toml  part2-example.toml
advent-of-code/inputs/2024-02/: part1-example.toml  part2-example.toml
advent-of-code/inputs/2024-03/: part1-example.toml  part2-example.toml
advent-of-code/inputs/2024-04/: part1-example.toml  part2-example.toml
advent-of-code/inputs/2024-05/: part1-example.toml
advent-of-code/inputs/2024-06/: part1-example.toml
advent-of-code/java/: pom.xml
advent-of-code/jl/: Manifest.toml  Project.toml
advent-of-code/jl/src/: AoC.jl  Util.jl  Y2023D01.jl
advent-of-code/jl/test/: Manifest.toml  runtests.jl
advent-of-code/rs/: Cargo.toml
advent-of-code/rs/src/: main.rs  util.rs  y2023_d01.rs
leetcode/java/: pom.xml
leetcode/py/: pyproject.toml
leetcode/py/src/leetcode/: __init__.py  problem1.py  problem15.py  problem18.py  problem3.py
leetcode/py/tests/: test_problem1.py  test_problem15.py  test_problem18.py  test_problem3.py
leetcode/rs/src/: lib.rs  problem0001.rs  problem0002.rs  problem0003.rs  problem0011.rs  problem0015.rs  problem0018.rs  problem0151.rs  problem0238.rs  problem0283.rs  problem0334.rs  problem0345.rs  problem0392.rs  problem0394.rs  problem0443.rs  problem0605.rs  problem0643.rs  problem0649.rs  problem0724.rs  problem0735.rs  problem0933.rs  (+14 more)
(+56 files in other folders)
